---------------------------------------------------------------------------------------------------
Version: 0.2.20
Date: 2020-12-04
  Bugfixes:
    - fixing crash when initializing items whithout recipe
  Changes:
    - fuel category display
    - more situations for getting help
    - smarter display of machine list
    - smarter treating of selector panel
---------------------------------------------------------------------------------------------------
Version: 0.2.19
Date: 2020-12-03
  Bugfixes:
    - fixing crash when initializing items whithout recipe
  Changes:
    - Rolled back to old selector since the new one causes performance problems with huge mods (huge mods are the target of this mod!)
---------------------------------------------------------------------------------------------------
Version: 0.2.18
Date: 2020-12-03
  Changes:
    - just bit more logging
---------------------------------------------------------------------------------------------------
Version: 0.2.17
Date: 2020-12-03
  Bugfixes:
    - fixing crash in on_string_translated (hotfix by out-commenting that handler)
---------------------------------------------------------------------------------------------------
Version: 0.2.16
Date: 2020-12-03
  Bugfixes:
    - fixing crash in on_gui_click caused by any other mod
    - fixing another crash when research finished: when database isn't initalized yet.
---------------------------------------------------------------------------------------------------
Version: 0.2.15
Date: 2020-12-02
  Bugfixes:
    - fixing crash when research is finished during reopened help panel whith that research displayed (again)
    - fixing scope of database
  Changes:
    - For assembly machines showing items of current recipe
---------------------------------------------------------------------------------------------------
Version: 0.2.14
Date: 2020-12-02
  Bugfixes:
    - fixing Error while running event ingteb:on_init()