@@ -12,6 +12,7 @@ Blue=[color=blue]__1__[/color]
 craft=[color=blue]__1__ __4__: herstellen\n__1__ __5__: 5 herstellen\n__3__ __4__: alle herstellen[/color]
 research=[color=blue]__2__ __4__: Forschung beginnen[/color]
 selector=Wähle einen Ziel für die Hilfe
+initial-technology=Initial freigeschaltet
 
 [mod-setting-name]
 ingteb_column-tab-threshold=Benutze Tabs wenn die Anzahl der Spalten größer ist als ...
