@@ -12,6 +12,7 @@ Blue=[color=blue]__1__[/color]
 craft=[color=blue]__1__ __4__ to craft\n__1__ __5__ to craft 5\n__3__ __4__ to craft max[/color]
 research=[color=blue]__2__ __4__ to queue research[/color]
 selector=Select a target for help
+initial-technology=Initially unlocked
 
 [mod-setting-name]
 ingteb_column-tab-threshold=Use tabs when more columns than ...
