@@ -8,6 +8,7 @@ Date: 2020-12-04
     - more situations for getting help
     - smarter display of machine list
     - smarter treating of selector panel
+    - provide fluids in selector
 ---------------------------------------------------------------------------------------------------
 Version: 0.2.19
 Date: 2020-12-03
